@@ -1546,14 +1546,31 @@
 (define-fn addc (estate options mode s1 s2 s3)
   (s-binop-with-bit estate "ADDC" mode s1 s2 s3)
 )
+;; ??? Whether to rename ADDCF/ADDOF -> ADDCCF/ADDCOF is debatable.
+(define-fn addc-cflag (estate options mode s1 s2 s3)
+  (s-binop-with-bit estate "ADDCF" mode s1 s2 s3)
+)
+(define-fn addc-oflag (estate options mode s1 s2 s3)
+  (s-binop-with-bit estate "ADDOF" mode s1 s2 s3)
+)
+
+(define-fn subc (estate options mode s1 s2 s3)
+  (s-binop-with-bit estate "SUBC" mode s1 s2 s3)
+)
+;; ??? Whether to rename SUBCF/SUBOF -> SUBCCF/SUBCOF is debatable.
+(define-fn subc-cflag (estate options mode s1 s2 s3)
+  (s-binop-with-bit estate "SUBCF" mode s1 s2 s3)
+)
+(define-fn subc-oflag (estate options mode s1 s2 s3)
+  (s-binop-with-bit estate "SUBOF" mode s1 s2 s3)
+)
+
+;; ??? These are deprecated.  Delete in time.
 (define-fn add-cflag (estate options mode s1 s2 s3)
   (s-binop-with-bit estate "ADDCF" mode s1 s2 s3)
 )
 (define-fn add-oflag (estate options mode s1 s2 s3)
   (s-binop-with-bit estate "ADDOF" mode s1 s2 s3)
-)
-(define-fn subc (estate options mode s1 s2 s3)
-  (s-binop-with-bit estate "SUBC" mode s1 s2 s3)
 )
 (define-fn sub-cflag (estate options mode s1 s2 s3)
   (s-binop-with-bit estate "SUBCF" mode s1 s2 s3)
